papers/LL-star/input/RatsJavaParser.java
/*
 * xtc - The eXTensible Compiler
 * Copyright (C) 2004-2006 Robert Grimm
 *
 * This program is free software; you can redistribute it and/or
 * modify it under the terms of the GNU General Public License
 * version 2 as published by the Free Software Foundation.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program; if not, write to the Free Software
 * Foundation, 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301,
 * USA.
 */

// $ANTLR 3.3-SNAPSHOT Oct 20, 2010 11:18:12 RatsJava.g 2010-10-22 15:14:56

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;
/**
 * Java grammar with AST support.
 * 
 * @author Robert Grimm
 * @author Stacey Kuznetsov
 * @version $Revision: 1.13 $
 */
public class RatsJavaParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "CTRLZ", "Identifier", "FloatingPointLiteral", "CharacterLiteral", "StringLiteral", "HexLiteral", "OctalLiteral", "DecimalLiteral", "HexDigit", "IntegerTypeSuffix", "Exponent", "FloatTypeSuffix", "EscapeSequence", "UnicodeEscape", "OctalEscape", "Letter", "JavaIDDigit", "WS", "COMMENT", "LINE_COMMENT", "'package'", "';'", "'import'", "'.'", "'*'", "'public'", "'protected'", "'private'", "'static'", "'abstract'", "'final'", "'native'", "'synchronized'", "'transient'", "'volatile'", "'strictfp'", "'('", "','", "')'", "'='", "'{'", "'}'", "'class'", "'interface'", "'throws'", "'extends'", "'implements'", "'if'", "'else'", "'for'", "'while'", "'do'", "'try'", "'finally'", "'catch'", "'switch'", "'case'", "':'", "'default'", "'return'", "'throw'", "'break'", "'continue'", "'assert'", "'+='", "'-='", "'*='", "'/='", "'&='", "'|='", "'^='", "'%='", "'<<='", "'>>='", "'>>>='", "'?'", "'||'", "'&&'", "'|'", "'^'", "'&'", "'=='", "'!='", "'instanceof'", "'<'", "'>'", "'<='", "'>='", "'<<'", "'>>'", "'>>>'", "'+'", "'-'", "'/'", "'%'", "'++'", "'--'", "'~'", "'!'", "'super'", "'['", "']'", "'new'", "'this'", "'void'", "'byte'", "'short'", "'char'", "'int'", "'long'", "'float'", "'double'", "'boolean'", "'true'", "'false'", "'null'"
    };
    public static final int T__29=29;
    public static final int T__28=28;
    public static final int T__27=27;
    public static final int T__26=26;
    public static final int FloatTypeSuffix=15;
    public static final int T__25=25;
    public static final int OctalLiteral=10;
    public static final int T__24=24;
    public static final int EOF=-1;
    public static final int Identifier=5;
    public static final int T__93=93;
    public static final int T__94=94;
    public static final int T__91=91;
    public static final int T__92=92;
    public static final int T__90=90;
    public static final int COMMENT=22;
    public static final int T__99=99;
    public static final int T__98=98;
    public static final int T__97=97;
    public static final int T__96=96;
    public static final int T__95=95;
    public static final int T__80=80;
    public static final int T__81=81;
    public static final int T__82=82;
    public static final int T__83=83;
    public static final int LINE_COMMENT=23;
    public static final int IntegerTypeSuffix=13;
    public static final int T__85=85;
    public static final int T__84=84;
    public static final int T__87=87;
    public static final int T__86=86;
    public static final int T__89=89;
    public static final int T__88=88;
    public static final int WS=21;
    public static final int T__71=71;
    public static final int T__72=72;
    public static final int T__70=70;
    public static final int FloatingPointLiteral=6;
    public static final int JavaIDDigit=20;
    public static final int T__76=76;
    public static final int T__75=75;
    public static final int T__74=74;
    public static final int Letter=19;
    public static final int EscapeSequence=16;
    public static final int T__73=73;
    public static final int T__79=79;
    public static final int T__78=78;
    public static final int T__77=77;
    public static final int T__68=68;
    public static final int T__69=69;
    public static final int T__66=66;
    public static final int T__67=67;
    public static final int T__64=64;
    public static final int T__65=65;
    public static final int T__62=62;
    public static final int T__63=63;
    public static final int T__118=118;
    public static final int CharacterLiteral=7;
    public static final int T__119=119;
    public static final int T__116=116;
    public static final int T__117=117;
    public static final int T__114=114;
    public static final int T__115=115;
    public static final int Exponent=14;
    public static final int T__61=61;
    public static final int T__60=60;
    public static final int HexDigit=12;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__107=107;
    public static final int T__108=108;
    public static final int T__109=109;
    public static final int T__59=59;
    public static final int T__103=103;
    public static final int T__104=104;
    public static final int T__105=105;
    public static final int T__106=106;
    public static final int T__111=111;
    public static final int T__110=110;
    public static final int T__113=113;
    public static final int T__112=112;
    public static final int CTRLZ=4;
    public static final int T__50=50;
    public static final int T__42=42;
    public static final int HexLiteral=9;
    public static final int T__43=43;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__102=102;
    public static final int T__101=101;
    public static final int T__100=100;
    public static final int DecimalLiteral=11;
    public static final int StringLiteral=8;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int UnicodeEscape=17;
    public static final int OctalEscape=18;

    // delegates
    // delegators


        public RatsJavaParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public RatsJavaParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
            this.state.ruleMemo = new HashMap[280+1];
             
             
        }
        

    public String[] getTokenNames() { return RatsJavaParser.tokenNames; }
    public String getGrammarFileName() { return "RatsJava.g"; }



    // $ANTLR start "compilationUnit"
    // RatsJava.g:49:1: compilationUnit : ( packageDeclaration )? ( importDeclaration )* ( declaration )* ( CTRLZ )? EOF ;
    public final void compilationUnit() throws RecognitionException {
        int compilationUnit_StartIndex = input.index();
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return ; }
            // RatsJava.g:49:17: ( ( packageDeclaration )? ( importDeclaration )* ( declaration )* ( CTRLZ )? EOF )
            // RatsJava.g:50:3: ( packageDeclaration )? ( importDeclaration )* ( declaration )* ( CTRLZ )? EOF
            {
            // RatsJava.g:50:3: ( packageDeclaration )?
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==24) ) {
                alt1=1;
            }
            switch (alt1) {
                case 1 :
                    // RatsJava.g:0:0: packageDeclaration
                    {
                    pushFollow(FOLLOW_packageDeclaration_in_compilationUnit42);
                    packageDeclaration();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;

            }

            // RatsJava.g:50:23: ( importDeclaration )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==26) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // RatsJava.g:0:0: importDeclaration
            	    {
            	    pushFollow(FOLLOW_importDeclaration_in_compilationUnit45);
            	    importDeclaration();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);

            // RatsJava.g:50:42: ( declaration )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==Identifier||LA3_0==25||(LA3_0>=29 && LA3_0<=39)||LA3_0==44||(LA3_0>=46 && LA3_0<=47)||(LA3_0>=108 && LA3_0<=116)) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // RatsJava.g:0:0: declaration
            	    {
            	    pushFollow(FOLLOW_declaration_in_compilationUnit48);
            	    declaration();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);

            // RatsJava.g:50:55: ( CTRLZ )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==CTRLZ) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // RatsJava.g:0:0: CTRLZ
                    {
                    match(input,CTRLZ,FOLLOW_CTRLZ_in_compilationUnit51); if (state.failed) return ;

                    }
                    break;

            }

            match(input,EOF,FOLLOW_EOF_in_compilationUnit54); if (state.failed) return ;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 1, compilationUnit_StartIndex); }
        }
        return ;
    }
    // $ANTLR end "compilationUnit"


    // $ANTLR start "packageDeclaration"
    // RatsJava.g:53:1: packageDeclaration : 'package' qualifiedIdentifier ';' ;
    public final void packageDeclaration() throws RecognitionException {
        int packageDeclaration_StartIndex = input.index();
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return ; }
            // RatsJava.g:53:20: ( 'package' qualifiedIdentifier ';' )
            // RatsJava.g:54:3: 'package' qualifiedIdentifier ';'
            {
            match(input,24,FOLLOW_24_in_packageDeclaration68); if (state.failed) return ;
            pushFollow(FOLLOW_qualifiedIdentifier_in_packageDeclaration70);
            qualifiedIdentifier();

            state._fsp--;
            if (state.failed) return ;
            match(input,25,FOLLOW_25_in_packageDeclaration72); if (state.failed) return ;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 2, packageDeclaration_StartIndex); }
        }
        return ;
    }
    // $ANTLR end "packageDeclaration"


    // $ANTLR start "importDeclaration"
    // RatsJava.g:57:1: importDeclaration : 'import' qualifiedIdentifier ( dotStarTail )? ';' ;
    public final void importDeclaration() throws RecognitionException {
        int importDeclaration_StartIndex = input.index();
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return ; }
            // RatsJava.g:57:19: ( 'import' qualifiedIdentifier ( dotStarTail )? ';' )
            // RatsJava.g:58:3: 'import' qualifiedIdentifier ( dotStarTail )? ';'
            {
            match(input,26,FOLLOW_26_in_importDeclaration86); if (state.failed) return ;
            pushFollow(FOLLOW_qualifiedIdentifier_in_importDeclaration88);
            qualifiedIdentifier();

            state._fsp--;
            if (state.failed) return ;
            // RatsJava.g:58:32: ( dotStarTail )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==27) ) {
                alt5=1;
            }
            switch (alt5) {
                case 1 :
                    // RatsJava.g:0:0: dotStarTail
                    {
                    pushFollow(FOLLOW_dotStarTail_in_importDeclaration90);
                    dotStarTail();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;

            }

            match(input,25,FOLLOW_25_in_importDeclaration96); if (state.failed) return ;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 3, importDeclaration_StartIndex); }
        }
        return ;
    }
    // $ANTLR end "importDeclaration"


    // $ANTLR start "dotStarTail"
    // RatsJava.g:62:1: dotStarTail : '.' '*' ;
    public final void dotStarTail() throws RecognitionException {
        int dotStarTail_StartIndex = input.index();
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 4) ) { return ; }
            // RatsJava.g:62:13: ( '.' '*' )
            // RatsJava.g:63:3: '.' '*'
            {
            match(input,27,FOLLOW_27_in_dotStarTail110); if (state.failed) return ;
            match(input,28,FOLLOW_28_in_dotStarTail112); if (state.failed) return ;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 4, dotStarTail_StartIndex); }
        }
        return ;
    }
    // $ANTLR end "dotStarTail"


    // $ANTLR start "name"
    // RatsJava.g:66:1: name : Identifier ;
    public final void name() throws RecognitionException {
        int name_StartIndex = input.index();
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 5) ) { return ; }
            // RatsJava.g:66:6: ( Identifier )
            // RatsJava.g:67:3: Identifier
            {
            match(input,Identifier,FOLLOW_Identifier_in_name126); if (state.failed) return ;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 5, name_StartIndex); }
        }
        return ;
    }
    // $ANTLR end "name"


    // $ANTLR start "modifiers"
    // RatsJava.g:70:1: modifiers : modifierList ;
    public final void modifiers() throws RecognitionException {
        int modifiers_StartIndex = input.index();
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 6) ) { return ; }
            // RatsJava.g:70:11: ( modifierList )
            // RatsJava.g:71:3: modifierList
            {
            pushFollow(FOLLOW_modifierList_in_modifiers140);
            modifierList();

            state._fsp--;
            if (state.failed) return ;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 6, modifiers_StartIndex); }
        }
        return ;
    }
    // $ANTLR end "modifiers"


    // $ANTLR start "modifierList"
    // RatsJava.g:74:1: modifierList : ( modifier )* ;
    public final void modifierList() throws RecognitionException {
        int modifierList_StartIndex = input.index();
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 7) ) { return ; }
            // RatsJava.g:74:14: ( ( modifier )* )
            // RatsJava.g:75:3: ( modifier )*
            {
            // RatsJava.g:75:3: ( modifier )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( ((LA6_0>=29 && LA6_0<=39)) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // RatsJava.g:0:0: modifier
            	    {
            	    pushFollow(FOLLOW_modifier_in_modifierList154);
            	    modifier();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 7, modifierList_StartIndex); }
        }
        return ;
    }
    // $ANTLR end "modifierList"


    // $ANTLR start "modifier"
    // RatsJava.g:78:1: modifier : ( 'public' | 'protected' | 'private' | 'static' | 'abstract' | 'final' | 'native' | 'synchronized' | 'transient' | 'volatile' | 'strictfp' );
    public final void modifier() throws RecognitionException {
        int modifier_StartIndex = input.index();
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 8) ) { return ; }
            // RatsJava.g:78:10: ( 'public' | 'protected' | 'private' | 'static' | 'abstract' | 'final' | 'native' | 'synchronized' | 'transient' | 'volatile' | 'strictfp' )
            // RatsJava.g:
            {
            if ( (input.LA(1)>=29 && input.LA(1)<=39) ) {
                input.consume();
                state.errorRecovery=false;state.failed=false;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return ;}
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 8, modifier_StartIndex); }
        }
        return ;
    }
    // $ANTLR end "modifier"


    // $ANTLR start "formalParameter"
    // RatsJava.g:92:1: formalParameter : variableModifiers type Identifier ( dimensions )? ;
    public final void formalParameter() throws RecognitionException {
        int formalParameter_StartIndex = input.index();
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 9) ) { return ; }
            // RatsJava.g:92:17: ( variableModifiers type Identifier ( dimensions )? )
            // RatsJava.g:93:3: variableModifiers type Identifier ( dimensions )?
            {
            pushFollow(FOLLOW_variableModifiers_in_formalParameter243);
            variableModifiers();

            state._fsp--;
            if (state.failed) return ;
            pushFollow(FOLLOW_type_in_formalParameter245);
            type();

            state._fsp--;
            if (state.failed) return ;
            match(input,Identifier,FOLLOW_Identifier_in_formalParameter247); if (state.failed) return ;
            // RatsJava.g:93:37: ( dimensions )?
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==104) ) {
                alt7=1;
            }
            switch (alt7) {
                case 1 :
                    // RatsJava.g:0:0: dimensions
                    {
                    pushFollow(FOLLOW_dimensions_in_formalParameter249);
                    dimensions();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 9, formalParameter_StartIndex); }
        }
        return ;
    }
    // $ANTLR end "formalParameter"


    // $ANTLR start "variableModifiers"
    // RatsJava.g:96:1: variableModifiers : ( finalModifier modifiers | modifiers );
    public final void variableModifiers() throws RecognitionException {
        int variableModifiers_StartIndex = input.index();
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 10) ) { return ; }
            // RatsJava.g:96:19: ( finalModifier modifiers | modifiers )
            int alt8=2;
            int LA8_0 = input.LA(1);

            if ( (LA8_0==34) ) {
                int LA8_1 = input.LA(2);
